[package]
name = "webaudio"
version = "0.1.0"
authors = ["Oussama <md.oussama@gmail.com>"]



[dependencies]
futures = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { git = "https://github.com/koute/stdweb" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { git = "https://github.com/oussama/rodio" }