[package]
name = "webaudio-example"
version = "0.1.0"
authors = ["Oussama <md.oussama@gmail.com>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
webaudio = { path = "../" }
application = {path = "../../application" }
byteorder = "*"
futures = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "*"
